checkpoitn with cursor
